# Personal-RAG-Agent

./: .env.example  .gitignore  README.md  Taskfile.yml  app.py  config.py  indexer.py  ingest.py  loaders.py  providers.py  pyproject.toml  rag.py
